small web fix, still working on mobile

--- a/components/slides/domstol/NumberSlide/Number.module.scss
+++ b/components/slides/domstol/NumberSlide/Number.module.scss
@@ -2,9 +2,6 @@
 
 .section {
     @include centerContent;
-}
-
-.container {
     height: 100%;
     width: 100vw;
     display: flex;
@@ -12,81 +9,70 @@
     font-weight: $font-weight-heading;
     align-items: center;
     justify-content: center;
-    overflow-x: hidden;
 }
 
+
 .textContainer {
-    //margin-bottom: 45px;
     margin-left: 2vw;
 }
 
 .number {
-    margin-left: 4vw;
     margin-bottom: 4vh;
     font-size: 14rem;
 }
 
-.text {
+.text1 {
     width: 20.625rem;
     font-size: 1.5rem;
-    display: flex;
-    flex-direction: column;
     margin: 0;
     padding: 0;
-    justify-items: flex-start;
-    align-items: flex-start;
+}
+
+.text2 {
+    width: 20.625rem;
+    font-size: 1.5rem;
+    margin: 0;
+    padding: 0;
 }
 
 @media only screen and (max-width: 1200px) {
     .section {
         height: 200vh;
         width: 100vw;
-
-    }
-
-    .container {
-        display: flex;
-        flex-direction: column;
-        position: relative;
-        align-items: flex-start;
-        overflow: visible;
         font-family: $font-family-body;
         font-weight: $font-weight-heading;
-        overflow-x: hidden;
-        height: 200vh;
-        top: 10px;
-
-        /*.description {
-            width: 90vw;
-            position: absolute;
-        }*/
-
-        .textContainer {
-            //margin-left: 0;
-        }
-
-        .text {
-            width: 20.625rem;
-            font-size: 1.5rem;
-            display: flex;
-            flex-direction: column;
-            margin: 0;
-            padding: 0;
-            justify-items: flex-start;
-            align-items: flex-start;
-        }
-
-        .number {
-            position: sticky;
-            top: 10px;
-            height: 100vh;
-            align-self: flex-start;
-            font-size: 4rem;
-
-            * {
-                display: none;
-                position: sticky;
-            }
-        }
     }
+
+    .textContainer {}
+
+    .text1 {
+        width: 20.625rem;
+        font-size: 1.5rem;
+        margin: 0;
+        padding: 0;
+        position: sticky;
+        top: 0;
+    }
+
+    .text2 {
+        width: 20.625rem;
+        font-size: 1.5rem;
+        margin: 0;
+        padding: 0;
+        position: sticky;
+        top: 0;
+    }
+
+    .number {
+        position: sticky;
+        top: 00;
+        left: 100px;
+        font-size: 4rem;
+    }
+
+    .extraheight {
+        height: 1000px;
+        width: 100vw;
+    }
+
 }
